--- a/youtube.html
+++ b/youtube.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>Youtube</title>
-    <link rel="stylesheet" href="../estilos/social.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="estilos/social.css" type="text/css" media="all" />
   </head>
   <body>
     <img src="imagens/tela-youtube.png" alt="Youtube" />
