--- a/github.html
+++ b/github.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <link rel="stylesheet" href="../estilos/social.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="estilos/social.css" type="text/css" media="all" />
     <title>Github</title>
   </head>
   <body>
